[package]
name = "npt_multiarch"
version = "0.1.0"
edition = "2024"

[features]
default = ["arm-el2"]
arm-el2 = ["page_table_entry/arm-el2"]

[dependencies]
cfg-if = "1.0"
bitflags = "2.2"
bit_field = "0.10"
numeric-enum-macro = "0.2"

memory_addr = "0.3"

page_table_entry = "0.5"
page_table_multiarch = "0.5"
